--- a/public/scss/contact.scss
+++ b/public/scss/contact.scss
@@ -41,6 +41,9 @@
     .contacts{
       margin-top: 3.3rem;
       transform: translateX(30%);
+      @include media-breakpoint-down(sm){
+        transform: translateX(0%);
+      }
       a{
         color: $drumwhite;
         text-decoration: none;
@@ -49,5 +52,18 @@
           color: $drumgrey;
         }
       }
+    }
+  }
+  .banner{
+    padding: 40px 0;
+    background-color: $drumyellow;
+    h3{
+      font-family: futuraBold;
+      font-size: 2.5rem;
+    }
+  }
+  #contact, .locations, .banner{
+    @include media-breakpoint-down(sm){
+      text-align: center;
     }
   }
