--- a/public/scss/general.scss
+++ b/public/scss/general.scss
@@ -27,7 +27,7 @@
 body {
   
   .full-height{
-    min-height: 100vh;
+    height: 100vh;
   }
 
     overflow-x: hidden;
